text aligned correctly omg

--- a/4odin_homepage_project/style.css
+++ b/4odin_homepage_project/style.css
@@ -109,12 +109,24 @@ make them stack. I tend to believe this section should be in the
 same container - a container for a quote */
 .quote-cont {
   display: flex;
-  /* flex-direction: column; */
-  /* align-items: center; */
+  background-color: lightgray;
+  flex-direction: column;
+  padding: 50px 70px;
 }
 
 .quote {
-  flex: auto;
+  flex: 1 1 1;
+  font-style: italic;
+  font-weight: lighter;
+  font-size: 36px;
+}
+
+.quote-source {
+  flex: 1 1 auto;
+  /* width: 100px; */
+  text-align: right;
+  font-weight: bold;
+  font-size: 22px;
 }
 
 .call-to-action {
